<?xml version="1.0" encoding="utf-8"?>
<com.yashoid.sequencelayout.SequenceLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:sequences="@xml/sequences_packinformation">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:srcCompat="@drawable/ic_arrow_left"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="20sp"
        android:textColor="@color/default_text" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:srcCompat="@drawable/img_information"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_packname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="18sp"
        android:textColor="@color/default_text"
        android:text="@string/packinformation_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_packname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="14sp"
        android:textColor="@color/default_text"
        android:textColorHint="@color/passive_text"
        android:hint="@string/packinformation_name_hint"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:background="@drawable/input_background"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_creatorname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="18sp"
        android:textColor="@color/default_text"
        android:text="@string/packinformation_creator"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_creatorname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="14sp"
        android:textColor="@color/default_text"
        android:textColorHint="@color/passive_text"
        android:hint="@string/packinformation_creator_hint"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:background="@drawable/input_background"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="18sp"
        android:textColor="@color/default_background"
        android:text="@string/packinformation_next"
        android:gravity="center"/>

</com.yashoid.sequencelayout.SequenceLayout>