<?xml version="1.0" encoding="utf-8"?>
<com.yashoid.sequencelayout.SequenceLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:sequences="@xml/sequences_stickerpack">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:srcCompat="@drawable/ic_arrow_left"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="20sp"
        android:textColor="@color/default_text"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="18sp"
        android:textColor="@color/default_background"
        android:text="@string/stickerpack_new"
        android:gravity="center"
        android:background="@drawable/button_background"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_sticker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_export"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="18sp"
        android:textColor="@color/default_background"
        android:text="@string/stickerpack_export"
        android:gravity="center"
        android:background="@drawable/export_button_background"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="18sp"
        android:textColor="@color/pacific_blue"
        android:text="@string/options"
        android:gravity="center"
        android:background="@drawable/options_button_background"/>

    <FrameLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:elevation="100dp"/>

</com.yashoid.sequencelayout.SequenceLayout>